Added tree-sitter-highlight libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,11 @@ macro(DeclareMain LibraryName SourceDirectory)
 	
 	add_library(${LibraryName} STATIC ${${LibraryName}_SOURCES})
 
-	target_include_directories(${LibraryName} PUBLIC "${SourceDirectory}")	
+	target_include_directories(${LibraryName} PUBLIC "${SourceDirectory}")
+	target_include_directories(${LibraryName} PUBLIC "${CMAKE_CURRENT_LIST_DIR}/highlight/include")
 	target_compile_options(${LibraryName} PRIVATE "/Zi" "/Oy-" "/EHsc")
 	target_link_options(${LibraryName} PRIVATE /DEBUG:FULL)
+	target_link_libraries(${LibraryName} PUBLIC debug "${CMAKE_CURRENT_LIST_DIR}/highlight/lib/debug/tree_sitter_highlight.lib" optimized "${CMAKE_CURRENT_LIST_DIR}/highlight/lib/release/tree_sitter_highlight.lib")
 endmacro()
 
 macro(DeclareLanguage LibraryName SourceDirectory HasScanner)
